add google-analytics ID

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -24,7 +24,7 @@ linkedin: https://www.linkedin.com/in/kaaira-gupta/ # Add your LinkedIn handle
 
 #-------------------------------
 # Google Analytics
-#google-analytics: # Add your identifier. For example UA-99631805-1.
+google-analytics: UA-165428319-1
 
 
 #-------------------------------
