--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -19,7 +19,7 @@ github: https://github.com/KaairaGupta # Add your Github handle
 linkedin: https://www.linkedin.com/in/kaaira-gupta/ # Add your LinkedIn handle
 
 # Comment Section (Disqus)
-#disqus-identifier: mr-brown # add your shortname for Disqus Comment. For example mr-brown
+disqus-identifier: kaaira-blog # add your shortname for Disqus Comment. For example mr-brown
 
 
 #-------------------------------
