--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 #-------------------------------
 # General Site Settings
-title: I’m Kaaira
+title: Kaaira
 logo: logo.svg
 description: Kaaira Gupta's blog
 
